== 2026-02-24 19:49 == Release: v1.2.1 — Drops mining, Windows system tray, and more ==

Major feature release combining the entire drops branch work.

NEW FEATURES:
- Twitch Drops mining: automatic inventory tracking, claiming, channel matching
  by allowed list or game directory, auto-select live channels, failover on
  offline/raid with 5min cooldown, campaign enable/disable from Web UI
- Windows system tray: TUI + tray icon side-by-side, Hide/Show Console toggle,
  Open Web UI, live stats in tray menu, Start with Windows auto-start (registry)
- Update notification system: checks for new stable/beta releases
- Web UI: Drop Campaigns table with toggle switch, TEMP/AUTO badges

IMPROVEMENTS:
- First-run experience: no more terminal channel prompt, starts straight into TUI
- Web server enabled by default for new and existing configs
- IRC retry logic for Spade heartbeats on network timeout
- Points from untracked channels now counted in stats

BUGFIXES:
- Fix claim log showing channel ID instead of display name
- Fix auto-select not triggering when matched channels are offline
- Fix drop assigned to multiple channels instead of one
- Fix offline temp channels not being cleaned up
- Fix IRC not joining channels after connect

== 2026-02-18 01:01 == Bugfix: Points from untracked channels not counted in stats (v1.2.0-beta.14) ==

Points earned on channels not in the config (via user-level PubSub) were silently
ignored. Now counted in totalPointsEarned and logged with resolved channel name.
- internal/farmer/farmer.go (EventPointsEarned handler)

== 2026-02-16 12:13 == Improvement: Better first-run experience (v1.2.0-beta.13) ==

Removed terminal channel prompt on first run — app starts directly into TUI/Web UI.
Users add channels via UI instead (TUI: 'a' key, Web: "+ Add Channel" button).
Web server now enabled by default for new and existing configs missing the field.
- cmd/twitchpoint/main.go (removed channel prompt, removed bufio import)