@@ -1,3 +1,9 @@
+== 2026-02-24 22:00 == Bugfix: Windows auto-start not working with spaces in path (v1.2.2) ==
+
+Registry Run value was unquoted, so paths with spaces (e.g. "C:\Users\John Doe\...")
+were parsed incorrectly by Windows. Now wraps the exe path in double quotes.
+- cmd/twitchpoint/autostart_windows.go (quoted exePath in SetStringValue)
+
 == 2026-02-24 19:49 == Release: v1.2.1 — Drops mining, Windows system tray, and more ==
 
 Major feature release combining the entire drops branch work.
